--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -15,11 +15,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import os \n",
+    "import os\n",
+    "import json\n",
     "\n",
     "import numpy as np\n",
     "import math\n",
@@ -800,7 +801,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1007,20 +1008,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[('he', 0.5358601808547974),\n",
-       " ('susan', 0.20049962401390076),\n",
-       " ('she', 0.06019211933016777),\n",
-       " ('john', 0.04058011621236801),\n",
-       " ('they', 0.014031900092959404)]"
+       "[('mary', 0.5444759130477905),\n",
+       " ('john', 0.24477779865264893),\n",
+       " ('she', 0.02064434438943863),\n",
+       " ('they', 0.0156028363853693),\n",
+       " ('he', 0.014261111617088318)]"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 81,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1030,11 +1031,7 @@
     "# text = [\"I went to school by bus. I was very tired.\"]\n",
     "# text = [\"Last week I went to the theatre. I had a very good seat. The play was very interesting. But I didn't enjoy it. A young man and a young woman were sitting behind me. They were talking loudly. I got very angry. I couldn't hear a word. I turned round. I looked at the man angrily. They didn't pay any attention.In the end, I couldn't bear it. I turned round again. 'I can't hear a word!' I said angrily. 'It's none of your business,' the young man said rudely. 'This is a private conversation!'\"]\n",
     "# text = [\"After the outbreak of the disease, the Ministry of Agriculture and rural areas immediately sent a supervision team to the local. Local Emergency Response Mechanism has been activated in accordance with the requirements, to take blockade, culling, harmless treatment, disinfection and other treatment measures to all disease and culling of pigs for harmless treatment. At the same time, all live pigs and their products are prohibited from transferring out of the blockade area, and live pigs are not allowed to be transported into the blockade area. At present, all the above measures have been implemented.\"]\n",
-    "text = [\"John thought that he would arrive earlier than Susan. But John was wrong because _  arrived earlier.\"]\n",
-    "# text = [\"John thought that he would arrive earlier than Susan. He was right because _  arrived the earliest.\"]\n",
-    "# text = [\"John made a right prediction in saying that he would arrive earlier than Susan because _ was the first to arrive.\"]\n",
-    "# text = [\"Was Tom taller than Susan? No, _ was taller.\"]\n",
-    "# text = [\"Jennifer has a big exam tomorrow. She got so stressed, she pulled an all-nighter. She went into class the next day, weary as can be. Her teacher stated that the test is postponed for next week. _ felt bittersweet about it.\"]\n",
+    "text = [\"John beat Mary. _ won the game.\"]\n",
     "analyze_text(text, show_firstk_probs=-1)"
    ]
   },
@@ -1080,6 +1077,7 @@
     "    \"John felt vindicated/crushed when his longtime rival Mary revealed that _ was the winner of the competition.\",\n",
     "    \"John couldn't see the stage with Mary in front of him because _ is so short/tall.\",\n",
     "    \"Although they ran at about the same speed, John beat Sally because _ had such a bad start.\",\n",
+    "    \"The fish ate the worm. The _ was hungry/tasty.\",\n",
     "]\n",
     "text"
    ]
@@ -1105,6 +1103,374 @@
    "outputs": [],
    "source": [
     "config"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open('WSC_switched_label.json') as f:\n",
+    "    examples = json.load(f)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open('WSC_associative_label.json') as f:\n",
+    "    assoc_labels = json.load(f)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "179"
+      ]
+     },
+     "execution_count": 51,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sum(['because' in e['sentence'] for e in examples]) + \\\n",
+    "sum(['so ' in e['sentence'] for e in examples]) + \\\n",
+    "sum(['but ' in e['sentence'] for e in examples]) + \\\n",
+    "sum(['though' in e['sentence'] for e in examples])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "37"
+      ]
+     },
+     "execution_count": 72,
+     "metadata": {},
+     "output_type": "execute_result"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0 0\n",
+      "1 0\n",
+      "2 0\n",
+      "3 0\n",
+      "4 0\n",
+      "5 0\n",
+      "6 0\n",
+      "7 0\n",
+      "8 0\n",
+      "9 0\n",
+      "10 0\n",
+      "11 0\n",
+      "12 0\n",
+      "13 0\n",
+      "14 0\n",
+      "15 0\n",
+      "16 0\n",
+      "17 0\n",
+      "18 0\n",
+      "19 0\n",
+      "20 0\n",
+      "21 0\n",
+      "22 0\n",
+      "23 0\n",
+      "24 0\n",
+      "25 0\n",
+      "26 0\n",
+      "27 0\n",
+      "28 0\n",
+      "29 0\n",
+      "30 0\n",
+      "31 0\n",
+      "32 0\n",
+      "33 0\n",
+      "34 0\n",
+      "35 0\n",
+      "36 0\n",
+      "37 0\n",
+      "38 0\n",
+      "39 0\n",
+      "40 0\n",
+      "41 0\n",
+      "42 0\n",
+      "43 0\n",
+      "44 0\n",
+      "45 0\n",
+      "46 0\n",
+      "47 0\n",
+      "48 0\n",
+      "49 0\n",
+      "50 0\n",
+      "51 0\n",
+      "52 0\n",
+      "56 0\n",
+      "57 0\n",
+      "59 0\n",
+      "60 0\n",
+      "61 0\n",
+      "62 0\n",
+      "63 0\n",
+      "64 0\n",
+      "65 0\n",
+      "66 0\n",
+      "67 0\n",
+      "68 0\n",
+      "69 0\n",
+      "70 0\n",
+      "71 0\n",
+      "73 0\n",
+      "76 0\n",
+      "77 0\n",
+      "78 0\n",
+      "79 0\n",
+      "80 0\n",
+      "81 0\n",
+      "82 0\n",
+      "83 0\n",
+      "84 0\n",
+      "85 0\n",
+      "86 0\n",
+      "88 0\n",
+      "89 0\n",
+      "90 0\n",
+      "91 0\n",
+      "92 0\n",
+      "93 0\n",
+      "94 0\n",
+      "95 0\n",
+      "96 0\n",
+      "97 0\n",
+      "99 0\n",
+      "100 0\n",
+      "101 0\n",
+      "102 0\n",
+      "104 0\n",
+      "105 0\n",
+      "106 0\n",
+      "107 0\n",
+      "108 0\n",
+      "110 0\n",
+      "111 0\n",
+      "113 0\n",
+      "114 0\n",
+      "115 0\n",
+      "121 0\n",
+      "122 0\n",
+      "123 0\n",
+      "124 0\n",
+      "125 0\n",
+      "126 0\n",
+      "127 0\n",
+      "128 0\n",
+      "129 0\n",
+      "130 0\n",
+      "131 0\n",
+      "132 0\n",
+      "133 0\n",
+      "134 0\n",
+      "135 0\n",
+      "139 0\n",
+      "140 0\n",
+      "141 0\n",
+      "142 0\n",
+      "143 0\n",
+      "144 0\n",
+      "145 0\n",
+      "148 0\n",
+      "149 0\n",
+      "150 0\n",
+      "151 0\n",
+      "152 0\n",
+      "153 0\n",
+      "154 0\n",
+      "156 0\n",
+      "157 0\n",
+      "159 0\n",
+      "160 0\n",
+      "161 0\n",
+      "162 0\n",
+      "163 0\n",
+      "164 0\n",
+      "165 0\n",
+      "166 0\n",
+      "167 0\n",
+      "168 0\n",
+      "169 0\n",
+      "170 0\n",
+      "171 0\n",
+      "172 0\n",
+      "173 0\n",
+      "178 0\n",
+      "179 0\n",
+      "186 0\n",
+      "187 0\n",
+      "188 0\n",
+      "189 0\n",
+      "190 0\n",
+      "191 0\n",
+      "193 0\n",
+      "194 0\n",
+      "195 0\n",
+      "196 0\n",
+      "197 0\n",
+      "198 0\n",
+      "199 0\n",
+      "200 0\n",
+      "201 0\n",
+      "202 0\n",
+      "203 0\n",
+      "204 0\n",
+      "205 0\n",
+      "206 0\n",
+      "207 0\n",
+      "208 0\n",
+      "209 0\n",
+      "210 0\n",
+      "211 0\n",
+      "212 0\n",
+      "213 0\n",
+      "214 0\n",
+      "215 0\n",
+      "216 0\n",
+      "217 0\n",
+      "218 0\n",
+      "219 0\n",
+      "220 0\n",
+      "221 0\n",
+      "222 0\n",
+      "223 0\n",
+      "224 0\n",
+      "225 0\n",
+      "226 0\n",
+      "227 0\n",
+      "228 0\n",
+      "229 0\n",
+      "230 0\n",
+      "232 0\n",
+      "233 0\n",
+      "234 0\n",
+      "235 0\n",
+      "236 0\n",
+      "237 0\n",
+      "238 0\n",
+      "239 0\n",
+      "240 0\n",
+      "241 0\n",
+      "242 0\n",
+      "243 0\n",
+      "244 0\n",
+      "245 0\n",
+      "246 0\n",
+      "247 0\n",
+      "248 0\n",
+      "249 0\n",
+      "250 0\n",
+      "251 0\n",
+      "252 0\n",
+      "253 0\n",
+      "254 0\n",
+      "255 0\n",
+      "256 0\n",
+      "257 0\n",
+      "258 0\n",
+      "259 0\n",
+      "260 0\n",
+      "261 0\n",
+      "262 0\n",
+      "263 0\n",
+      "264 0\n",
+      "265 0\n",
+      "267 0\n",
+      "268 0\n",
+      "269 0\n",
+      "270 0\n",
+      "271 0\n",
+      "272 0\n",
+      "53 1\n",
+      "54 1\n",
+      "55 1\n",
+      "58 1\n",
+      "72 1\n",
+      "74 1\n",
+      "75 1\n",
+      "87 1\n",
+      "98 1\n",
+      "103 1\n",
+      "109 1\n",
+      "112 1\n",
+      "116 1\n",
+      "117 1\n",
+      "118 1\n",
+      "119 1\n",
+      "120 1\n",
+      "136 1\n",
+      "137 1\n",
+      "138 1\n",
+      "146 1\n",
+      "147 1\n",
+      "155 1\n",
+      "158 1\n",
+      "174 1\n",
+      "175 1\n",
+      "176 1\n",
+      "177 1\n",
+      "180 1\n",
+      "181 1\n",
+      "182 1\n",
+      "183 1\n",
+      "184 1\n",
+      "185 1\n",
+      "192 1\n",
+      "231 1\n",
+      "266 1\n"
+     ]
+    }
+   ],
+   "source": [
+    "# assoc_labels[:5]\n",
+    "sum([al['is_associative'] for al in assoc_labels])\n",
+    "for al in assoc_labels:\n",
+    "    e = examples[al['index']]\n",
+    "    assert e['index'] == al['index'], \"%d != %d\" % (e['index'], al['index'])\n",
+    "    e['is_associative'] = al['is_associative']\n",
+    "    print(al['index'], al['is_associative'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "{'index':4,\n",
+    "'sentences':[{'sentence': 'Joan made sure to thank Susan for all the help [she] had recieved.', 'answer1':'','answer0':'','correct_answer':''}, {}]}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 73,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open('WSC_switched_label.json', 'w') as f:\n",
+    "    json.dump(examples, f)"
    ]
   }
  ],
