--- a/src/transformers/models/owlv2/test.ipynb
+++ b/src/transformers/models/owlv2/test.ipynb
@@ -2,9 +2,76 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 56,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "loading configuration file preprocessor_config.json from cache at /Users/nielsrogge/.cache/huggingface/hub/models--google--owlv2-base-patch16-ensemble/snapshots/2bdb6e85f0901eba45563d53ddd53359759284f3/preprocessor_config.json\n",
+      "Image processor Owlv2ImageProcessor {\n",
+      "  \"do_normalize\": true,\n",
+      "  \"do_pad\": true,\n",
+      "  \"do_rescale\": true,\n",
+      "  \"do_resize\": true,\n",
+      "  \"image_mean\": [\n",
+      "    0.48145466,\n",
+      "    0.4578275,\n",
+      "    0.40821073\n",
+      "  ],\n",
+      "  \"image_processor_type\": \"Owlv2ImageProcessor\",\n",
+      "  \"image_std\": [\n",
+      "    0.26862954,\n",
+      "    0.26130258,\n",
+      "    0.27577711\n",
+      "  ],\n",
+      "  \"processor_class\": \"Owlv2Processor\",\n",
+      "  \"resample\": 2,\n",
+      "  \"rescale_factor\": 0.00392156862745098,\n",
+      "  \"size\": {\n",
+      "    \"height\": 960,\n",
+      "    \"width\": 960\n",
+      "  }\n",
+      "}\n",
+      "\n",
+      "loading file vocab.json from cache at /Users/nielsrogge/.cache/huggingface/hub/models--google--owlv2-base-patch16-ensemble/snapshots/2bdb6e85f0901eba45563d53ddd53359759284f3/vocab.json\n",
+      "loading file merges.txt from cache at /Users/nielsrogge/.cache/huggingface/hub/models--google--owlv2-base-patch16-ensemble/snapshots/2bdb6e85f0901eba45563d53ddd53359759284f3/merges.txt\n",
+      "loading file tokenizer.json from cache at None\n",
+      "loading file added_tokens.json from cache at /Users/nielsrogge/.cache/huggingface/hub/models--google--owlv2-base-patch16-ensemble/snapshots/2bdb6e85f0901eba45563d53ddd53359759284f3/added_tokens.json\n",
+      "loading file special_tokens_map.json from cache at /Users/nielsrogge/.cache/huggingface/hub/models--google--owlv2-base-patch16-ensemble/snapshots/2bdb6e85f0901eba45563d53ddd53359759284f3/special_tokens_map.json\n",
+      "loading file tokenizer_config.json from cache at /Users/nielsrogge/.cache/huggingface/hub/models--google--owlv2-base-patch16-ensemble/snapshots/2bdb6e85f0901eba45563d53ddd53359759284f3/tokenizer_config.json\n",
+      "loading configuration file config.json from cache at /Users/nielsrogge/.cache/huggingface/hub/models--google--owlv2-base-patch16-ensemble/snapshots/2bdb6e85f0901eba45563d53ddd53359759284f3/config.json\n",
+      "text_config is None. Initializing the Owlv2TextConfig with default values.\n",
+      "vision_config is None. initializing the Owlv2VisionConfig with default values.\n",
+      "Model config Owlv2Config {\n",
+      "  \"architectures\": [\n",
+      "    \"Owlv2ForObjectDetection\"\n",
+      "  ],\n",
+      "  \"initializer_factor\": 1.0,\n",
+      "  \"logit_scale_init_value\": 2.6592,\n",
+      "  \"model_type\": \"owlv2\",\n",
+      "  \"projection_dim\": 512,\n",
+      "  \"text_config\": {\n",
+      "    \"model_type\": \"owlv2_text_model\"\n",
+      "  },\n",
+      "  \"torch_dtype\": \"float32\",\n",
+      "  \"transformers_version\": \"4.35.0.dev0\",\n",
+      "  \"vision_config\": {\n",
+      "    \"image_size\": 960,\n",
+      "    \"model_type\": \"owlv2_vision_model\",\n",
+      "    \"patch_size\": 16\n",
+      "  }\n",
+      "}\n",
+      "\n",
+      "loading weights file pytorch_model.bin from cache at /Users/nielsrogge/.cache/huggingface/hub/models--google--owlv2-base-patch16-ensemble/snapshots/2bdb6e85f0901eba45563d53ddd53359759284f3/pytorch_model.bin\n",
+      "All model checkpoint weights were used when initializing Owlv2ForObjectDetection.\n",
+      "\n",
+      "All the weights of Owlv2ForObjectDetection were initialized from the model checkpoint at google/owlv2-base-patch16-ensemble.\n",
+      "If your task is similar to the task the model of the checkpoint was trained on, you can already use Owlv2ForObjectDetection for predictions without further training.\n"
+     ]
+    }
+   ],
    "source": [
     "from transformers import Owlv2Processor, Owlv2ForObjectDetection\n",
     "\n",
@@ -14,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
@@ -24,7 +91,7 @@
        "<PIL.JpegImagePlugin.JpegImageFile image mode=RGB size=500x490>"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 57,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -43,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
@@ -67,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -87,7 +154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [
     {
@@ -96,7 +163,7 @@
        "torch.Size([1, 3600, 1])"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 60,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -107,7 +174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [
     {
@@ -116,7 +183,7 @@
        "torch.Size([1, 3600, 4])"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 61,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -127,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [
     {
@@ -149,7 +216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [
     {
@@ -159,7 +226,7 @@
        "<PIL.Image.Image image mode=RGB size=960x960>"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 63,
      "metadata": {},
      "output_type": "execute_result"
     }
