revert notebook changes

--- a/examples/research_projects/movement-pruning/Saving_PruneBERT.ipynb
+++ b/examples/research_projects/movement-pruning/Saving_PruneBERT.ipynb
@@ -307,7 +307,7 @@
     "            print(f\"Skip {name}\")\n",
     "            continue\n",
     "\n",
-    "        if isinstance(param, torch).Tensor:\n",
+    "        if type(param) == torch.Tensor:\n",
     "            if param.numel() == 1:\n",
     "                # module scale\n",
     "                # module zero_point\n",
@@ -319,13 +319,13 @@
     "                param = param.detach().numpy()\n",
     "            hf.create_dataset(name, data=param, compression=\"gzip\", compression_opts=9)\n",
     "\n",
-    "        elif isinstance(param, float) or type(param) == int or type(param) == tuple:\n",
+    "        elif type(param) == float or type(param) == int or type(param) == tuple:\n",
     "            # float - tensor _packed_params.weight.scale\n",
     "            # int   - tensor _packed_params.weight.zero_point\n",
     "            # tuple - tensor _packed_params.weight.shape\n",
     "            hf.attrs[name] = param\n",
     "\n",
-    "        elif isinstance(param, torch).dtype:\n",
+    "        elif type(param) == torch.dtype:\n",
     "            # dtype - tensor _packed_params.dtype\n",
     "            hf.attrs[name] = dtype_2_str[param]\n",
     "\n",
